# orthrus-1

./: README.md
1.Hardware/models/NUC/: 侧板.SLDPRT  安装板.SLDPRT  进风板.SLDPRT  通风板.SLDPRT  非通风板.SLDPRT
1.Hardware/models/仿真模型/: body.dae  hip_LF.dae  hip_RF.stl  leg_2.stl  leg_L_1.stl
1.Hardware/models/加工文件/: 内侧主碳板.SLDPRT  内侧主碳板.STEP  内侧碳板.SLDPRT  内侧碳板.STEP  内侧碳板2.SLDPRT  内侧碳板2.STEP
1.Hardware/models/外观简图/: 小腿草图.SLDPRT
1.Hardware/models/简单四连杆/: 1.SLDPRT  传动杆.SLDPRT
1.Hardware/models/腿部/: 上盖加工.SLDASM  上盖加工.SLDPRT  内侧主碳板.SLDPRT  内侧碳板.SLDPRT  内侧碳板2.SLDPRT  外壳上盖.SLDASM  外壳上盖2.SLDPRT  外壳下盖.SLDPRT  外壳下盖.STEP  小腿外型.SLDPRT  推力轴承压环.SLDPRT  滚针推力轴承.SLDPRT  电路仓.SLDPRT  腿部.SLDASM  膝关节磁钢套筒.SLDPRT  膝关节轴.SLDPRT  轴套.SLDPRT  铝件2.SLDPRT
1.Hardware/models/躯干框架/: 左壳.SLDPRT  躯干框架.SLDASM
1.Hardware/models/髋关节模组/: 垫片.SLDPRT  曲柄输出盘.SLDPRT  曲柄输出盘.STL  输出盘加强.STL  髋关节.SLDASM
1.hardware/: 临时装配1.SLDASM  主板.SLDPRT  主板支架.SLDPRT  后左下壳连接件.SLDPRT  大腿合金件1.SLDPRT  底盘碳板.SLDPRT  身体支撑.SLDPRT  髋部关节组件1-静应力分析 1.DSP  髋部关节组件1-静应力分析 1.ELF  髋部关节组件1-静应力分析 1.GEN  髋部关节组件1-静应力分析 1.IDA  髋部关节组件1-静应力分析 1.LCD  髋部关节组件1-静应力分析 1.LDS  髋部关节组件1-静应力分析 1.MAS  髋部关节组件1-静应力分析 1.MFC  髋部关节组件1-静应力分析 1.OUT  髋部关节组件1-静应力分析 1.STG  髋部关节组件1.SLDPRT  髋部关节组件2.SLDPRT  髋部支架1-静应力分析.MFC  髋部支架1.SLDPRT  髋部碳板.SLDPRT
1.hardware/models/: PerformanceLog.txt  临时装配1.SLDASM  主板.SLDPRT  主板支架.SLDPRT  右壳.SLDPRT  大腿.SLDPRT  左壳.SLDPRT  总装.SLDASM  身体支撑.SLDPRT  髋部关节组件2.SLDPRT  髋部支架1.SLDPRT  髋部支架2.SLDPRT  髋部碳板.SLDPRT
1.hardware/models/NUC/: M3×10铜柱.SLDPRT  M3×16铜柱.SLDPRT  NUC.SLDASM  README.txt  主板.SLDPRT
1.hardware/models/仿真模型/: body.STL  calf.STL  hip_RF.dae  hip_joint.STL  leg_L.STL  leg_R.STL  leg_R_1.stl
1.hardware/models/加工文件/: 上盖加工.STEP  小腿.STEP  曲柄输出盘.DXF  曲柄输出盘.STL  膝关节编码器压环.STEP  膝关节轴.STEP  铝件1.DXF  铝件2.DXF  髋部支架1.STEP
1.hardware/models/外观简图/: leg_2.stp  leg_L.stp  ~$大腿草图-右.SLDPRT  大腿草图-右.SLDPRT  大腿草图.SLDPRT  小腿草图.SLDPRT  简要装配.SLDASM  身体草图.SLDPRT  髋关节草图.SLDPRT
1.hardware/models/简单四连杆/: 主动杆.SLDPRT  从动杆.SLDPRT  四连杆.SLDASM
1.hardware/models/腿部/: 上盖加工.SLDASM  交滚轴承座.SLDPRT  内侧主碳板.SLDPRT  内侧碳板.SLDPRT  外壳上盖.SLDASM  外壳上盖.SLDPRT  外壳上盖1.SLDPRT  外壳上盖2.SLDPRT  外壳下盖.SLDPRT  外形.SLDPRT  小腿.SLDPRT  推力轴承压环.SLDPRT  滚针推力轴承.SLDPRT  电路仓.SLDPRT  磁编.SLDPRT  编码器磁钢.SLDPRT  腿部.SLDASM  膝关节法兰轴承.SLDPRT  膝关节编码器压环.SLDPRT  膝关节轴.SLDPRT  螺丝头套筒.SLDPRT  连杆.SLDPRT  连杆轴承.SLDPRT  铝件1.SLDPRT  铝件2.SLDPRT
1.hardware/models/躯干框架/: 底盘碳板.SLDPRT
1.hardware/models/髋关节模组/: 曲柄输出盘.SLDPRT  轴承压环.SLDPRT  输出盘加强.SLDPRT  髋关节.SLDASM  髋部关节组件_肘部电机连接件.SLDPRT  髋部支架_L型后支架.SLDPRT
1.hardware/内六角沉头螺钉M25/temp/: torx_socket_countersunk_flat_head_M2.5x04.step  torx_socket_countersunk_flat_head_M2.5x06.step  torx_socket_countersunk_flat_head_M2.5x10.step  torx_socket_countersunk_flat_head_M2.5x20.step  torx_socket_countersunk_flat_head_M2.5x30.step
1.hardware/内六角沉头螺钉M3/temp/: hex_socket_button_head_M3x04.step  hex_socket_button_head_M3x06.step  hex_socket_button_head_M3x14.step  hex_socket_button_head_M3x18.step  hex_socket_button_head_M3x25.step  hex_socket_button_head_M3x30.step
1.hardware/加工文件/: ~$髋部支架1.SLDPRT  髋部关节组件1.STEP  髋部关节组件2.STEP  髋部支架1.SLDPRT  髋部支架1.STEP
2.Software/GD32F4_ecat/STM32F405 Ethercat/: stm32f4xx_conf.h  stm32f4xx_it.c
2.Software/ROS2_pack/: 新建 文本文档.txt
2.Software/ROS2_pack/record_1/orthrus_ctrl/: CMakeLists.txt  package.xml
2.Software/ROS2_pack/record_1/orthrus_ctrl/include/serialPort/: SerialPort.h
2.Software/ROS2_pack/record_1/orthrus_ctrl/src/: changeID.cpp
2.Software/STM32F4_ecat/: SSC-IO.xml
2.software/ROS2_pack/test_1/orthrus_gazebo/: CMakeLists.txt
2.software/ROS2_pack/test_1/orthrus_gazebo/launch/: gazebo_smooth.launch.py
2.software/ROS2_pack/test_1/orthrus_gazebo/plugin/: model_push.cc
2.software/ROS2_pack/test_1/orthrus_gazebo/robot/orthrus/: model.config
2.software/ROS2_pack/test_1/orthrus_gazebo/robot/orthrus/meshes/: hip_LB.dae  leg_2.dae  leg_R_1.dae
2.software/ROS2_pack/test_1/orthrus_gazebo/worlds/: hello_world.world
2.software/orthrus_code/2021.3.27/src/check/: CMakeLists.txt
2.software/orthrus_code/2021.3.27/src/check/src/: check_acc_leg.cpp  check_pos_leg.cpp  check_pos_motor.cpp
3.document/模块资料/宇树A1电机/485_unblock/: CMakeLists.txt
3.document/模块资料/宇树A1电机/485_unblock/include/: LSerial.h  motor_ctrl.h
3Dmodel/: 架.STEP  髋部面板.STEP
3Dmodel/SOLLDWORKS Part Document/: 1.SLDPRT  上外壳.SLDPRT  下外壳.SLDPRT  动力单元组件.SLDPRT  大腿1.SLDPRT  大腿2.SLDPRT  大腿3.SLDPRT  大腿4.SLDPRT  大腿5.SLDPRT  小腿.SLDPRT  小腿2.SLDPRT  整机.SLDASM  架.SLDPRT  比例图（外观）.SLDPRT  电池.SLDPRT  电池盒外壳.SLDPRT  电池盒底板.SLDPRT  电池盒面板.SLDPRT  短管.SLDPRT  管.SLDPRT  脚架.SLDPRT  腿.SLDASM  腿盖.SLDPRT  膝关节1.SLDPRT  膝关节1.STEP  足尖.SLDPRT  足尖2.SLDPRT  连接件.SLDPRT  连接件2.SLDPRT  连接件3.SLDPRT  连接件4.SLDPRT  连杆1.SLDPRT  隔板.SLDPRT  髋部电机盘1.SLDPRT  髋部电机盘1（拆分1）.SLDPRT  髋部电机盘1（拆分2）.SLDPRT  髋部面板.SLDPRT
3Dmodel/加工文件/: 大腿2.DXF  大腿3.DXF  大腿4.DXF  大腿5.DXF  小腿.DXF  小腿.STEP  小腿2.DXF  架(2视图).DXF  架.DXF  架.STEP  腿盖.STEP  膝关节1.STEP  足尖.STEP  足尖2.STEP  隔板.DXF  隔板.STEP  髋部电机盘1（拆分1）.DXF  髋部电机盘1（拆分1）.STEP  髋部电机盘1（拆分2）.DXF  髋部电机盘1（拆分2）.STEP
3D模型/: 架.STEP  髋部面板.STEP
PCB/新建文件夹/: Gerber_BoardOutline.GKO  Gerber_BottomLayer.GBL  Gerber_BottomSolderMaskLayer.GBS  Gerber_Drill_PTH.DRL  Gerber_TopLayer.GTL  Gerber_TopSilkLayer.GTO  Gerber_TopSolderMaskLayer.GTS
notebook/: def  konk  m  marker.md  n  note1.ipynb  note2.ipynb  note4.ipynb  s
notebook/.ipynb_checkpoints/: note1-checkpoint.ipynb  note3-checkpoint.ipynb  note4-checkpoint.ipynb
test/battery/: LTC2943.cpp  LTC2943.h  LT_I2C.cpp  LT_I2C.h  Linduino.h  README.md  battery.ino
test/bettry/: bettry.ino
test/dynamics/: .editorconfig  dynamics.cpp  dynamics.sln  dynamics.vcxproj  dynamics.vcxproj.filters
test/sketch_feb04a/: sketch_feb04a.ino
webots/: robot1.rar
技术资料/: 新建文本文档.txt
模块资料/: 485_unblock.tar  485_unblock.tar.xz
模块资料/Autostart/: Autostart.ino  LTC2943.cpp  LTC2943.h  LT_I2C.cpp  Linduino.h  QuikEval_EEPROM.cpp  UserInterface.cpp  UserInterface.h
论文资料/力分配/: 广义逆.txt
论文资料/运动学/: Dof2_Leg.m  f_2Dof.m  f_2Dof.prj  i_2Dof.m  i_2Dof.prj  jacobi.m  main.m
论文资料/阻抗控制/: 四足机器人足端运动阻抗控制研究_陈高风.caj  未确知环境下机器人力控制技术研究_李二超.caj  机器人柔顺控制算法研究_崔亮.caj
(+1320 files in other folders)
